--- a/wantedalways-system/src/style/index.scss
+++ b/wantedalways-system/src/style/index.scss
@@ -1,12 +1,15 @@
 
-html {
+html, body, #app {
   height: 100%;
+  margin: 0;
+  padding: 0;
+}
+html {
   box-sizing: border-box;
   background: #EBEEF5 url(~@/assets/background.svg) no-repeat;
 }
 
 body {
-  height: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -14,5 +17,5 @@ body {
 }
 
 #app {
-  height: 100%;
+
 }
