--- a/wantedalways-system/src/style/index.scss
+++ b/wantedalways-system/src/style/index.scss
@@ -7,6 +7,7 @@ html, body, #app {
 html {
   box-sizing: border-box;
   background: #EBEEF5 url(~@/assets/background.svg) no-repeat;
+  background-size: cover;
 }
 
 body {
